--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "Wanda Evans",
   "license": "Apache-2.0",
   "devDependencies": {
+    "@babel/plugin-proposal-class-properties": "^7.16.7",
     "eslint": "^8.8.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-import": "^2.25.4",
